--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ nav.scrolled #navLogo{
   width: 8rem;
 }
 #navLogo{
-width: 11rem;
+width: 10rem;
 }
 
 .drop-down {
@@ -762,7 +762,8 @@ padding-bottom: 0;
 
 .testimonials-description {
     max-width: 800px;
-    margin: 0 auto 40px;
+    margin: 1rem auto 40px;
+    font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
 
 /* Trustpilot Widget Styling */
@@ -821,8 +822,10 @@ padding-bottom: 0;
 
 .partners-description {
     line-height: 1.6;
+    margin-top: 1rem;
     margin-bottom: 2.5rem;
     text-align: center;
+    font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
 
 .partners-grid {
