--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ h1, h2, h3, h4 {
 
 p, a, li {
   font-weight: 300;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
     line-height: 1.6;
 }
 /*--------------------------------------------------------------
@@ -53,7 +53,7 @@ nav{
     justify-content: space-between;
     background-color: transparent;
    font-size: 5px;
-   height: 70px;
+   height: 80px;
    width: 100%;
    padding: 20px;
 }
@@ -63,7 +63,8 @@ nav{
 
 
 #hamburgerIcon{
-    color: #fff;
+    color: #fff; 
+    margin-top: 2rem;
 }
 
 nav.scrolled {
@@ -73,14 +74,17 @@ nav.scrolled {
 }
 
 nav.scrolled #hamburgerIcon {
-  color: #000; /* change icon color if needed */
+  color: #000;
+  margin-bottom: 1rem;
 }
 nav.scrolled #navLogo{
   content: url('assets/Logo_p.png');
-  width: 8rem;
+  width: 6rem;
+  margin-bottom: 1rem;
 }
 #navLogo{
-width: 10rem;
+width: 7rem;
+margin-top: 2rem;
 }
 
 .drop-down {
@@ -189,11 +193,9 @@ margin-bottom: 1.5rem;
 .services-drop-down{
   display: flex;
   flex-direction: column;
-  /* align-items: center;
-  text-align: center; */
-  justify-content: center;
+  justify-content: left;
   max-height: 0;
-  overflow-y: hidden; /* Start hidden */
+  overflow-y: hidden;
   opacity: 0;
   pointer-events: none;
   transition: max-height 0.6s ease, opacity 0.6s ease;
@@ -201,9 +203,8 @@ margin-bottom: 1.5rem;
   font-size: 0.3rem;
 }
 .s-d ul   li a {
-font-size: 3px;
-/* margin: 0.5rem 0; */
-  text-align: center;
+font-size: 2px;
+  text-align: left;
 }
 
 /* When shown */
@@ -1059,9 +1060,7 @@ padding-bottom: 0;
 }
 
 .footer-logo img {
-  /* width: 400px; */
-  max-width: 200px;
-  /* height: 120px; */
+  min-width: 150px;
 }
 
 .footer-links ul,
@@ -1756,7 +1755,7 @@ padding-bottom: 2rem;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
   text-align: center;
   margin: 2rem 0;
-
+font-size: 1.2rem;
   display: flex;
   flex-direction: column;
 }
@@ -2046,12 +2045,14 @@ footer nav ul li a {
   color: #343463;
   text-align: center;
   margin-bottom: 1rem;
+  display: flex;
+  justify-content: center;
 }
 
 .intro {
   text-align: center;
   max-width: 43rem;
-  margin: 0 auto 2rem;
+  margin: 2rem auto;
 }
 
 .steps {
@@ -2284,7 +2285,9 @@ nav .drop-down a.active:hover::after {
   width: 80%;
 }
 
-
+#navLogo{
+margin-left: 2rem;
+}
 
 .nav-links {
   display: flex;
@@ -2514,6 +2517,8 @@ gap: 3rem;
 }
 /* Services end */
 /* About start */
+
+@media(min-width: 992px){
 .about{
 display: flex;
 flex-direction: column;
@@ -2521,11 +2526,11 @@ background-color: #e7e7ed;
 }
 
 .about-image{
-  height: clamp(200px, 30vh, 600px)
+  height: clamp(200px, 13vh, 600px)
 }
 
  .about-image img{
-  filter: brightness(60%);
+  filter: brightness(40%);
  }
 
 #about h2, #about a, #about p{
@@ -2534,8 +2539,9 @@ background-color: #e7e7ed;
   margin-bottom: 2rem;
   color: #fff;
   text-align: center;
+  opacity: 2;
 }
-
+}
 
 .properties-hero h1, .properties-hero h2 {
   z-index: 0; 
