--- a/das-11ty-site/src/_includes/page.njk
+++ b/das-11ty-site/src/_includes/page.njk
@@ -1,10 +1,8 @@
-
-<!-- filepath: src/_includes/page.njk -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>{{ title or "Page" }}</title>
+  <title>{{ title }}</title>
 </head>
 <body>
   <main>
