--- a/das-11ty-site/src/_includes/page.njk
+++ b/das-11ty-site/src/_includes/page.njk
@@ -1,3 +1,4 @@
+<!-- src/_includes/page.njk -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,8 +6,6 @@
   <title>{{ title }}</title>
 </head>
 <body>
-  <main>
-    {{ content | safe }}
-  </main>
+  {{ content | safe }}
 </body>
 </html>
