--- a/css/style.css
+++ b/css/style.css
@@ -963,20 +963,21 @@ padding-bottom: 0;
   background: none;
   border: none;
   cursor: pointer;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
+  font-weight: bold;
   color: #343463;
   transition: transform 0.3s ease;
   margin-bottom: 1rem;
 }
 
-#toggle-investment-btn .arrow {
+#toggle-investment-btn .toggle-arrow {
   display: inline-block;
   margin-left: 0.5rem;
   transition: transform 0.5s ease;
 }
 
-#toggle-investment-btn.expanded .arrow {
-  transform: rotate(180deg); /* Rotates the ▼ arrow to look like ▲ */
+#toggle-investment-btn.expanded .toggle-arrow {
+  transform: rotate(180deg);
 }
 
 
