added new changes

--- a/src/global-opportunities.njk
+++ b/src/global-opportunities.njk
@@ -75,332 +75,33 @@
 </section>
 
 <div class="global-header">
-<h1>LONDON</h1>
+<h1>Global Opportunities</h1>
 </div>
 
 <div class="card-container">
+  {% for property in collections.properties %}
     <div class="card">
-      <img class="card-img" src="/static/assets/london/woolwich/Woolwich1.png" alt="">
-        <h2>London Square Woolwich</h2>
-       
-        <div class="overview-highlight">
-<div class="overview-highlight-1">
-<p><i class="fas fa-tag icon"></i> <strong>Price From £408,000</strong></p>
-<p><i class="fas fa-hourglass-half icon"></i> <strong>Complete: Q1 2028</strong></p>
-</div>
-<div class="overview-highlight-2">
-  <p><i class="fas fa-money-bill-wave icon"></i> <strong>10% Deposit Now</strong></p>
-<p><i class="fas fa-chart-line icon"></i> <strong>Up to 5.9% Yield</strong></p>
-</div>
+      <img class="card-img" src="{{ property.data.mainImage }}" alt="{{ property.data.title }}">
+      <h2>{{ property.data.title }}</h2>
+      <div class="overview-highlight">
+        <div class="overview-highlight-1">
+          <p><i class="fas fa-tag icon"></i> <strong>Price From {{ property.data.priceFrom }}</strong></p>
+          <p><i class="fas fa-hourglass-half icon"></i> <strong>Complete: {{ property.data.completionDate }}</strong></p>
         </div>
-        <p class="card-p">A development of 122 apartments across 14-storeys, offering excellent facilities.</p>
-        <a href="/london-woolwich/" class="card-btn">Learn More</a>
-    </div>
-
-    <div class="card">
-      <img class="card-img" src="/static/assets/london/fairfield/fairfield1.png" alt="">
-        <h2>Fairfield Lodge</h2>
-       
-        <div class="overview-highlight">
-<div class="overview-highlight-1">
-<p><i class="fas fa-tag icon"></i> <strong>Price From £965,000</strong></p>
-<p><i class="fas fa-hourglass-half icon"></i> <strong>Complete: Q2/Q3 2025</strong></p>
-</div>
-<div class="overview-highlight-2">
-  <p><i class="fas fa-money-bill-wave icon"></i> <strong>10% Deposit Now</strong></p>
-</div>
+        <div class="overview-highlight-2">
+          <p><i class="fas fa-money-bill-wave icon"></i> <strong>{{ property.data.deposit }} Deposit Now</strong></p>
+          {% if property.data.yield %}
+            <p><i class="fas fa-chart-line icon"></i> <strong>Up to {{ property.data.yield }} Yield</strong></p>
+          {% endif %}
         </div>
-        <p class="card-p">Four luxury apartments in upmarket Cobham, a quintessential English village only 38 minutes from London Waterloo.</p>
-        <a href="/london-fairfield/" class="card-btn">Learn More</a>
+      </div>
+      <p class="card-p">{{ property.data.description }}</p>
+      <a href="/{{ property.fileSlug }}/" class="card-btn">Learn More</a>
     </div>
-
-    <div class="card">
-      <img class="card-img" src="/static/assets/london/crown1/crown1.png" alt="">
-        <h2>crown Gate</h2>
-       
-        <div class="overview-highlight">
-<div class="overview-highlight-1">
-<p><i class="fas fa-tag icon"></i> <strong>Price From  £350,000</strong></p>
-<p><i class="fas fa-hourglass-half icon"></i> <strong>Complete: Q1 2026</strong></p>
-</div>
-<div class="overview-highlight-2">
-  <p><i class="fas fa-money-bill-wave icon"></i> <strong>15% Deposit Now</strong></p>
-<p><i class="fas fa-chart-line icon"></i> <strong>Up to 5.2% Yield</strong></p>
-</div>
-        </div>
-        <p class="card-p">A collection of 14 luxury apartments in a private gated community in the suburban Surrey village of Claygate.</p>
-        <a href="/london-crown/" class="card-btn">Learn More</a>
-    </div>
-     
-    <div class="card">
-      <img class="card-img" src="/static/assets/london/goldfinch/goldfinch1.png" alt="">
-        <h2>Goldfinch Apartments</h2>
-       
-        <div class="overview-highlight">
-<div class="overview-highlight-1">
-<p><i class="fas fa-tag icon"></i> <strong>Price From £392,000</strong></p>
-<p><i class="fas fa-hourglass-half icon"></i> <strong>Complete: Q2 2024</strong></p>
-</div>
-<div class="overview-highlight-2">
-  <p><i class="fas fa-money-bill-wave icon"></i> <strong>10% Deposit Now</strong></p>
-<p><i class="fas fa-chart-line icon"></i> <strong>Up to 6% Yield</strong></p>
-</div>
-        </div>
-        <p class="card-p">Located in a major area of regeneration, Hendon Waterside is a new residential and award-winning community for North London; 2,000 homes across 30 acres.
-
-</p>
-        <a href="/london-goldfinch/" class="card-btn">Learn More</a>
-    </div>
-
-    <div class="card">
-      <img class="card-img" src="/static/assets/london/aspen/aspen1.png" alt="">
-        <h2>Aspen</h2>
-       
-        <div class="overview-highlight">
-<div class="overview-highlight-1">
-<p><i class="fas fa-tag icon"></i> <strong>Price From  £499,950</strong></p>
-<p><i class="fas fa-hourglass-half icon"></i> <strong>Complete: Q1 2025</strong></p>
-</div>
-<div class="overview-highlight-2">
-  <p><i class="fas fa-money-bill-wave icon"></i> <strong>5% Deposit Now</strong></p>
-<p><i class="fas fa-chart-line icon"></i> <strong>Up to 5.5% Yield</strong></p>
-</div>
-        </div>
-        <p class="card-p">A striking new 63-storey tower with incredible city-wide views, poised to be one of the largest in the already iconic Canary Wharf skyline, part of Consort Place.</p>
-        <a href="/london-aspen/" class="card-btn">Learn More</a>
-    </div>
-
-    <div class="card">
-      <img class="card-img" src="/static/assets/london/bookbinder/bookbinder1.png" alt="">
-        <h2>Bookbinder Point</h2>
-       
-        <div class="overview-highlight">
-<div class="overview-highlight-1">
-<p><i class="fas fa-tag icon"></i> <strong>Price From £430,000</strong></p>
-<p><i class="fas fa-hourglass-half icon"></i> <strong>Complete: Q1 2024</strong></p>
-</div>
-<div class="overview-highlight-2">
-  <p><i class="fas fa-money-bill-wave icon"></i> <strong>10% Deposit Now</strong></p>
-<p><i class="fas fa-chart-line icon"></i> <strong>Up to 5% Yield</strong></p>
-</div>
-        </div>
-        <p class="card-p">Setting the bar for contemporary city living, Bookbinder Point is a stunning development of 98 immaculately designed 1- and 2-bedroom apartments.</p>
-        <a href="/london-bookbinder/" class="card-btn">Learn More</a>
-    </div>
+  {% endfor %}
 </div>
 
-<div class="global-header">
-<h1>MANCHESTER</h1>
-</div>
-
-<div class="card-container">
-    <div class="card">
-      <img class="card-img" src="/static/assets/manchester/Kingfisher/kingfisher1.png" alt="">
-        <h2>Kingfisher</h2>
-       
-        <div class="overview-highlight">
-<div class="overview-highlight-1">
-<p><i class="fas fa-tag icon"></i> <strong>Price From £250,000</strong></p>
-<p><i class="fas fa-hourglass-half icon"></i> <strong>Complete: Q2 2028</strong></p>
-</div>
-<div class="overview-highlight-2">
-  <p><i class="fas fa-money-bill-wave icon"></i> <strong>10% Deposit Now</strong></p>
-<p><i class="fas fa-chart-line icon"></i> <strong>Up to 6.5% Yield</strong></p>
-</div>
-        </div>
-        <p class="card-p">The tallest tower around the Red Bank Riverside podium gardens, the 30-storey Kingfisher boasts the development's most stunning views, overlooking River Irk.</p>
-        <a href="/manchester-kingfisher/" class="card-btn">Learn More</a>
-    </div>
-
-    <div class="card">
-      <img class="card-img" src="/static/assets/manchester//new-manchester/New Manchester1.png" alt="">
-        <h2>New Manchester</h2>
-       
-        <div class="overview-highlight">
-<div class="overview-highlight-1">
-<p><i class="fas fa-tag icon"></i> <strong>Price From £200,000</strong></p>
-<p><i class="fas fa-hourglass-half icon"></i> <strong>Complete: Q2 2025</strong></p>
-</div>
-<div class="overview-highlight-2">
-  <p><i class="fas fa-money-bill-wave icon"></i> <strong>20% Deposit Now</strong></p>
-  <p><i class="fas fa-chart-line icon"></i> <strong>Up to 6.6% Yield</strong></p>
-</div>
-        </div>
-        <p class="card-p">A 20-storey tower with retail on the ground floor, situated in a prime Red Bank location with views of the high street, River Irk, and green public spaces.</p>
-        <a href="/new-manchester/" class="card-btn">Learn More</a>
-    </div>
-
-     <div class="card">
-      <img class="card-img" src="/static/assets/manchester/Victoria/victoria1.png" alt="">
-        <h2>Crown View</h2>
-       
-        <div class="overview-highlight">
-<div class="overview-highlight-1">
-<p><i class="fas fa-tag icon"></i> <strong>Price From £289,935</strong></p>
-<p><i class="fas fa-hourglass-half icon"></i> <strong>Complete: Q2 2025</strong></p>
-</div>
-<div class="overview-highlight-2">
-  <p><i class="fas fa-money-bill-wave icon"></i> <strong>10% Deposit Now</strong></p>
-  <p><i class="fas fa-chart-line icon"></i> <strong>Up to 6% Yield</strong></p>
-</div>
-        </div>
-        <p class="card-p">Crown View is the flagship of the North's largest urban renewal, regenerating Victoria Riverside and extending Manchester city centre with new parkland.</p>
-        <a href="/manchester-crown/" class="card-btn">Learn More</a>
-    </div> 
-</div>
-
-<div class="global-header">
-<h1>BIRMINGHAM</h1>
-</div>
-
-<div class="card-container">
-    <div class="card">
-      <img class="card-img" src="/static/assets/birmingham/sloane/sloane1 .png" alt="">
-        <h2>Sloane</h2>
-       
-        <div class="overview-highlight">
-<div class="overview-highlight-1">
-<p><i class="fas fa-tag icon"></i> <strong>Price From £203,500</strong></p>
-<p><i class="fas fa-hourglass-half icon"></i> <strong>Complete: Summer 2026</strong></p>
-</div>
-<div class="overview-highlight-2">
-  <p><i class="fas fa-money-bill-wave icon"></i> <strong>15% Deposit Now</strong></p>
-<p><i class="fas fa-chart-line icon"></i> <strong>Up to 5.5% Yield</strong></p>
-</div>
-        </div>
-        <p class="card-p">Located in the Jewellery Quarter, Birmingham’s fastest growing neighbourhood. Easy walking distance to central Birmingham’s retail districts and places of work .
-</p>
-        <a href="/birmingham-sloane/" class="card-btn">Learn More</a>
-    </div>
-
-    <div class="card">
-      <img class="card-img" src="/static/assets/birmingham/scholars/scholars1.png" alt="">
-        <h2>Scholars</h2>
-       
-        <div class="overview-highlight">
-<div class="overview-highlight-1">
-<p><i class="fas fa-tag icon"></i> <strong>Price From £235,000</strong></p>
-<p><i class="fas fa-hourglass-half icon"></i> <strong>Completed</strong></p>
-</div>
-<div class="overview-highlight-2">
-  <p><i class="fas fa-chart-line icon"></i> <strong>Up to 6.6% Yield</strong></p>
-</div>
-        </div>
-        <p class="card-p">A Birmingham investment property opportunity, a collection of 100 apartments in the heart of Birmingham’s vibrant historic district, the Jewellery Quarter.</p>
-        <a href="/birmingham-scholars/" class="card-btn">Learn More</a>
-    </div>
- </div>
-
-
-<div class="global-header">
-<h1>THE SOUTH</h1>
-</div>
-
-<div class="card-container">
-    <div class="card">
-      <img class="card-img" src="/static/assets/south/triangle/Triangle1.png" alt="">
-        <h2>The Triangle</h2>
-       
-        <div class="overview-highlight">
-<div class="overview-highlight-1">
-<p><i class="fas fa-tag icon"></i> <strong>Price From £225,000</strong></p>
-<p><i class="fas fa-hourglass-half icon"></i> <strong>Complete: Q2 2025</strong></p>
-</div>
-<div class="overview-highlight-2">
-  <p><i class="fas fa-money-bill-wave icon"></i> <strong>20% Deposit Now</strong></p>
-<p><i class="fas fa-chart-line icon"></i> <strong>Up to 6% Yield</strong></p>
-</div>
-        </div>
-        <p class="card-p">The Triangle is a striking development of 99 apartments overlooking the River Stour and neighbouring Victoria Park in the boom town of Ashford, Kent.</p>
-        <a href="/south-triangle/" class="card-btn">Learn More</a>
-    </div>
-
-    <div class="card">
-      <img class="card-img" src="/static/assets/south/goldstone/goldstone1.png" alt="">
-        <h2>Goldstone Apartments</h2>
-       
-        <div class="overview-highlight">
-<div class="overview-highlight-1">
-<p><i class="fas fa-tag icon"></i> <strong>Price From £365,000</strong></p>
-<p><i class="fas fa-hourglass-half icon"></i> <strong>Complete: Summer 2025</strong></p>
-</div>
-<div class="overview-highlight-2">
-  <p><i class="fas fa-money-bill-wave icon"></i> <strong>20% Deposit Now</strong></p>
-  <p><i class="fas fa-chart-line icon"></i> <strong>Up to 6.6% Yield</strong></p>
-</div>
-        </div>
-        <p class="card-p">One of the UK’s most vibrant and welcoming cities: The Goldstone Apartments is part of the exciting regeneration of a dynamic new residential neighbourhood in Hove.</p>
-        <a href="/south-goldstone/" class="card-btn">Learn More</a>
-    </div>
-    </div>
-
-<div class="global-header">
-<h1>East Anglia</h1>
-</div>
-
-<div class="card-container">
-    <div class="card">
-      <img class="card-img" src="/static/assets/east anglia/sudbury/sudbury1.png" alt="">
-        <h2>Sudbury Fields</h2>
-       
-        <div class="overview-highlight">
-<div class="overview-highlight-1">
-<p><i class="fas fa-tag icon"></i> <strong>Price From £229,950</strong></p>
-<p><i class="fas fa-hourglass-half icon"></i> <strong>Complete: Q2 2024</strong></p>
-</div>
-<div class="overview-highlight-2">
-  <p><i class="fas fa-money-bill-wave icon"></i> <strong>15% Deposit Now</strong></p>
-<p><i class="fas fa-chart-line icon"></i> <strong>Up to 5.1% Yield</strong></p>
-</div>
-        </div>
-        <p class="card-p">A rural community of 46 homes in the Suffolk village of Great Cornard, close to the picturesque market town Sudbury. Designed to be forever homes</p>
- <a href="/east-sudbury/" class="card-btn">Learn More</a>
-    </div>
-    </div>
-
-
-  <div class="global-header">
-<h1>THAILAND</h1>
-</div>
-
-<div class="card-container">
-    <div class="card">
-      <img class="card-img" src="/static/assets/Thailand/Bang-Tao/Bang Tao1.png" alt="">
-        <h2>Nebu Resort, Bang Tao</h2>
-       
-        <div class="overview-highlight">
-<div class="overview-highlight-1">
-<p><i class="fas fa-tag icon"></i> <strong>Price From $123,000</strong></p>
-
-</div>
-<div class="overview-highlight-2">
-<p><i class="fas fa-chart-line icon"></i> <strong>Up to 15% Rental Yield</strong></p>
-</div>
-        </div>
-        <p class="card-p"></p>
- <a href="/thailand-bang-tao/" class="card-btn">Learn More</a>
-    </div>
-
-    <div class="card">
-      <img class="card-img" src="/static/assets/Thailand/Jomtien/Jomtien6.png" alt="">
-        <h2>Nebu Resort, Jomtien</h2>
-       
-        <div class="overview-highlight">
-<div class="overview-highlight-1">
-<p><i class="fas fa-tag icon"></i> <strong>Price From $88,500</strong></p>
-</div>
-<div class="overview-highlight-2">
-  <p><i class="fas fa-chart-line icon"></i> <strong>9% to 15% Rental Yield</strong></p>
-</div>
-        </div>
-        <p class="card-p">6 luxurious Hotels with a total of 950 rooms</p>
-  <a href="/thailand-jomtien/" class="card-btn">Learn More</a>
-    </div>
-    </div>
-
-
-
- <section class="contact">
+<section class="contact">
   <div id="contact">
 <h2>Get in touch with us today.</h2>
 <p>If you have inquiries regarding property investments in the UK, require professional guidance, or wish to learn about our services, 
