--- a/src/how-it-works.njk
+++ b/src/how-it-works.njk
@@ -26,7 +26,7 @@
  <!-- Navigation Start -->
 <nav class="Navigations">
   <a href="/index/">
-    <img id="navLogo" src="/static/assets//static/assets/Logo_w.png" alt="Logo" width="150px" height="auto">
+    <img id="navLogo" src="/static/assets/Logo_w.png" alt="Logo" width="150px" height="auto">
   </a>
   
 
@@ -47,7 +47,7 @@
 <h3></h3>
 <a href="/property-sourcing-and-purchasing/">Property Sourcing and Purchasing</a>
 <a href="/rental-management/">Rental management</a>
-<a href="/sales-exit-strategy/">Sales & exit strategy</a>
+<a href="/sales&exit-strategy/">Sales & exit strategy</a>
 <a href="/consultancy/">Consultancy</a>
 
 </div>
@@ -60,7 +60,7 @@
         <a href="/global-opportunities/">Global opportunities</a>
     </li>
     <li>
-        <a href="/contact/">Contact us</a>
+        <a href="/contact/"">Contact us</a>
     </li>
 </li>
         </ul>
@@ -279,7 +279,7 @@ please complete the form, and a member of our team will contact you to assist yo
   <div class="container">
     <div class="footer-grid">
       <div class="footer-logo">
-        <a href="/index/"><img src="/static/assets//static/assets/Logo_w.png" alt="Company Logo"></a>
+        <a href="/index/"><img src="/static/assets/Logo_w.png" alt="Company Logo"></a>
       </div>
 
       <div class="footer-links">
@@ -293,7 +293,7 @@ please complete the form, and a member of our team will contact you to assist yo
 
           <li><a href="/services/">Services</a></li>
           
-          <li><a href="/contact/">Contact</a></li>
+          <li><a href="/contact/"">Contact</a></li>
         </ul>
       </div>
 
